--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="search_placeholder">Search</string>
     <string name="search_icon">Search Icon</string>
     <string name="close_icon">Close Icon</string>
+    <string name="sade_face_icon">Sad Face Icon</string>
+    <string name="no_tasks_found">No Task Found</string>
 </resources>
