--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="close_icon">Close Icon</string>
     <string name="sade_face_icon">Sad Face Icon</string>
     <string name="no_tasks_found">No Task Found</string>
+    <string name="back_arrow">Back Arrow</string>
+    <string name="add_task">Add Task</string>
 </resources>
